syntax = "proto3";

package proto;
option go_package = "./;proto";

import "RegionSimpleInfo.proto";

message QueryRegionListHttpRsp {
  int32 retcode = 1;
  repeated RegionSimpleInfo region_list = 2;
  bytes client_secret_key = 5;
  bytes client_custom_config_encrypted = 6;
  bool enable_login_pc = 7;
}
