syntax = "proto3";

package proto;
option go_package = "./;proto";


message RegionSimpleInfo {
  string name = 1;
  string title = 2;
  string type = 3;
  string dispatch_url = 4;
}
